// Vitest Snapshot v1

exports[`webpack > compilation.errors 1`] = `
"<span style=\\"background-color:#e06c75\\"><b><span style=\\"color:#fafafa\\"> ERROR <span style=\\"color:#383a42\\"><span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"background-color:#fafafa\\"> <span style=\\"color:#e06c75\\"><b>ModuleParseError<span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"color:#383a42\\"><span style=\\"color:#383a42\\">: <span style=\\"color:#383a42\\">Module parse failed: Identifier directly after number (1:1)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https:/webpack.js.org/concepts#loaders
> 3d2u8j0c;l, kms nk
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> handleParseError (<WORKSPACE>/node_modules/<PNPM_INNER>/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (<HOME>/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> processResult (<UNKNOWN>/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (<UNKNOWN>/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (<UNKNOWN>/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> iterateNormalLoaders (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Array.eval (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> runCallbacks (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/enhanced-resolve@5.15.0/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/enhanced-resolve@5.15.0/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/graceful-fs@4.2.10/node_modules/graceful-fs/graceful-fs.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> FSReqCallback.readFileAfterClose [as oncomplete] (node:internal/fs/read_file_context:<POS>)
<span style=\\"background-color:#e06c75\\"><b><span style=\\"color:#fafafa\\"> CAUSE <span style=\\"color:#383a42\\"><span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"background-color:#fafafa\\"> <span style=\\"color:#e06c75\\"><b>SyntaxError<span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"color:#383a42\\"><span style=\\"color:#383a42\\">: <span style=\\"color:#383a42\\">Identifier directly after number (1:1)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> (syntax error) (SyntaxError: Identifier directly after number (1:1))
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.pp$4.raise (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.pp.readNumber (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.pp.getTokenFromCode (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.pp.readToken (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.readToken (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn-import-assertions@1.9.0_acorn@8.8.1/node_modules/acorn-import-assertions/lib/index.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.pp.nextToken (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Object.parse (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Function.parse (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/acorn@8.8.1/node_modules/acorn/dist/acorn.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Function._parse (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/javascript/JavascriptParser.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> JavascriptParser.parse (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/javascript/JavascriptParser.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> processResult (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> iterateNormalLoaders (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/loader-runner@4.3.0/node_modules/loader-runner/lib/LoaderRunner.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/NormalModule.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Array.eval (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> runCallbacks (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/enhanced-resolve@5.15.0/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/enhanced-resolve@5.15.0/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/graceful-fs@4.2.10/node_modules/graceful-fs/graceful-fs.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> FSReqCallback.readFileAfterClose [as oncomplete] (node:internal/fs/read_file_context:<POS>)
<span style=\\"background-color:#e06c75\\"><b><span style=\\"color:#fafafa\\"> ERROR <span style=\\"color:#383a42\\"><span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"background-color:#fafafa\\"> <span style=\\"color:#e06c75\\"><b>Error<span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"color:#383a42\\"><span style=\\"color:#383a42\\">: <span style=\\"color:#383a42\\">foo
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (<ROOT>/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> _next26 (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> _next4 (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as call] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_DELEGATE [as _call] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.newCompilation (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.compile (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.readRecords (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> new Promise (<anonymous>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> webpackBuild (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-chain.98d42d89.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-chain.98d42d89.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> runTest (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runSuite (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runSuite (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runFiles (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async startTestsNode (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (async /Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/entry.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async Module.withEnv (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/entry.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (async file:/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tinypool@0.2.4/node_modules/tinypool/dist/esm/worker.js:<POS>)
</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></b></span></span></span></span></span></b></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></b></span></span></span></span></span></b></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></b></span></span></span></span></span></b></span>"
`;

exports[`webpack > throw new error 1`] = `
"<span style=\\"background-color:#e06c75\\"><b><span style=\\"color:#fafafa\\"> ERROR <span style=\\"color:#383a42\\"><span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"background-color:#fafafa\\"> <span style=\\"color:#e06c75\\"><b>Error<span style=\\"font-weight:normal;text-decoration:none;font-style:normal\\"><span style=\\"color:#383a42\\"><span style=\\"color:#383a42\\">: <span style=\\"color:#383a42\\">bar
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (<ROOT>/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> _next26 (<WORKSPACE>/node_modules/<PNPM_INNER>/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> _next4 (<HOME>/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as call] (<UNKNOWN>/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_DELEGATE [as _call] (<UNKNOWN>/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.newCompilation (<UNKNOWN>/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.compile (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.readRecords (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.eval [as callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/HookCodeFactory.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tapable@2.2.1/node_modules/tapable/lib/Hook.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> Compiler.run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/webpack@5.82.1_esbuild@0.15.7_webpack-cli@5.1.4/node_modules/webpack/lib/Compiler.js:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> new Promise (<anonymous>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> webpackBuild (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/packages/builder/friendly-errors-webpack-plugin/tests/webpack.test.ts:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-chain.98d42d89.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-chain.98d42d89.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> runTest (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runSuite (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runSuite (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async runFiles (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async startTestsNode (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (async /Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/entry.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async Module.withEnv (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/chunk-runtime-error.87a2b5a2.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\"> async run (/Users/bytedance/repositories/modern.js/node_modules/.pnpm/vitest@0.21.1_@vitest+ui@0.21.1/node_modules/vitest/dist/entry.mjs:<POS>)
    <span style=\\"color:#383a42\\">at<span style=\\"color:#383a42\\">  (async file:/Users/bytedance/repositories/modern.js/node_modules/.pnpm/tinypool@0.2.4/node_modules/tinypool/dist/esm/worker.js:<POS>)</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></b></span></span></span></span></span></b></span>"
`;
